add react + webpack

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Electron</title>
   </head>
   <body>
-    Yo
+    <div data-app></div>
+    <script src="js/index.js"></script>
   </body>
 </html>
