--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div data-app></div>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
